# startup-dued-forge

./: .env.example  AUDIT_GITHUB.md  AUDIT_SOCIAL_REPORT.md  AUDIT_TAVILY.md  LICENSE  README.md  main.py  pyproject.toml  run_github_only.py
config/: target_meilisearch.py
core/: __init__.py  github_scanner.py  mistral_analyzer.py  reddit_scanner.py  report_builder.py  tavily_scanner.py
